--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,26 +1,72 @@
 // bower:scss
 // endbower
 
-body {
-  background: #fafafa;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #333;
+@import url(https://fonts.googleapis.com/css?family=Fira+Sans:400,300,300italic,400italic,500,500italic,700,700italic);
+@import "variables";
+@import "mixins";
+@import "path";
+@import "core";
+@import "larger";
+@import "fixed-width";
+@import "list";
+@import "bordered-pulled";
+@import "animated";
+@import "rotated-flipped";
+@import "stacked";
+@import "icons";
+@import "screen-reader";
+
+
+html {
+  box-sizing: border-box;
 }
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
+*, *:before, ::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: "Fira Sans", sans-serif;
+  margin: 0;
+  background-image: linear-gradient(260deg, black, #c16ecf 100%);
+}
+
+a {
+  color: white;
+  font-weight: 100;
+  letter-spacing: 2px;
+  text-decoration: none;
+  background: rgba(0,0,0,.2);
+  padding: 20px, 5px;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  transition: all .5s;
+  &:hover {
+    background: rgba(0,0,0,.3);
   }
+}
+
+.toggle-nav {
+  display: none;
+}
+
+img {
+  width:100%;
+}
+
+input {
+  padding:10px;
+  border:0;
+}
+
+section, footer {
+  text-align: center;
+  background:rgba(0,0,0,0.2);
+  padding:20px;
+  margin:20px 0;
+  color:white;
+  font-weight: 100;
 }
 
 .browserupgrade {
@@ -28,4 +74,64 @@ body {
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
+}
+
+.wrapper {
+  max-width: 1000px;
+  margin: 0 auto;
+  // padding: 50px;
+}
+
+// flex
+.flex-nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.flex-nav li {
+  flex: 3;
+}
+
+.flex-nav .social {
+  flex: 1;
+}
+
+@media all and (max-width: 1000px) {
+  .flex-nav ul {
+    flex-wrap: wrap;
+  }
+  .flex-nav li {
+    flex:1 1 50%;
+  }
+  .flex-nav .social {
+    flex: 1 1 33%;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .flex-nav li {
+    flex-basis: 100%;
+  }
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .wrapper > * {
+    order: 9999;
+  }
+  .flex-nav {
+    order: 1;
+    ul {
+      display:none;
+      &.open {
+        display: flex;
+      }
+    }
+  }
+
+  .toggle-nav {
+    display: block;
+  }
 }
