--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,175 +1,176 @@
 // bower:scss
 // endbower
 
-// $purple-gradient: linear-gradient(260deg, black, #c16ecf 100%);
-//
-// @import url(https://fonts.googleapis.com/css?family=Fira+Sans:400,300,300italic,400italic,500,500italic,700,700italic);
-//
-// @import "fontawesome/_fontawesome";
-//
-// @import "_animation";
-//
-// html {
-//   box-sizing: border-box;
-// }
-//
-// *, *:before, ::after {
-//   box-sizing: inherit;
-// }
+$purple-gradient: linear-gradient(260deg, black, #c16ecf 100%);
+
+@import url(https://fonts.googleapis.com/css?family=Fira+Sans:400,300,300italic,400italic,500,500italic,700,700italic);
+
+@import "fontawesome/_fontawesome";
+
+@import "_animation";
+
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, ::after {
+  box-sizing: inherit;
+}
 //
 body {
   font-family: "Fira Sans", sans-serif;
   margin: 0;
-}
-//
-// a {
-//   color: white;
-//   font-weight: 100;
-//   letter-spacing: 2px;
-//   text-decoration: none;
-//   // background: rgba(0,0,0,.2);
-//   padding: 20px, 5px;
-//   display: inline-block;
-//   width: 100%;
-//   text-align: center;
-//   transition: all .5s;
-//   &:hover {
-//     // background: rgba(0,0,0,.3);
-//   }
-// }
-//
-// .toggle-nav {
-//   display: none;
-// }
-//
-// img {
-//   width:100%;
-// }
-//
-// input {
-//   padding:10px;
-//   border:0;
-// }
-//
-// section, footer {
-//   text-align: center;
-//   background:rgba(0,0,0,0.2);
-//   padding:20px;
-//   margin:20px 0;
-//   color:white;
-//   font-weight: 100;
-// }
-//
-// .browserupgrade {
-//   margin: 0.2em 0;
-//   background: #ccc;
-//   color: #000;
-//   padding: 0.2em 0;
-// }
-//
-// .wrapper {
-//   max-width: 1000px;
-//   margin: 0 auto;
-//   // padding: 50px;
-// }
-//
-// // flex
-// .flex-nav ul {
-//   list-style: none;
-//   margin: 0;
-//   padding: 0;
-//   display: flex;
-// }
-//
-// .flex-nav li {
-//   flex: 3;
-// }
-//
-// .flex-nav .social {
-//   flex: 1;
-// }
-//
-// @media all and (max-width: 1000px) {
-//   .flex-nav ul {
-//     flex-wrap: wrap;
-//   }
-//   .flex-nav li {
-//     flex:1 1 50%;
-//   }
-//   .flex-nav .social {
-//     flex: 1 1 33%;
-//   }
-// }
-//
-// @media all and (max-width: 500px) {
-//   .flex-nav li {
-//     flex-basis: 100%;
-//   }
-//   .wrapper {
-//     display: flex;
-//     flex-direction: column;
-//   }
-//   .wrapper > * {
-//     order: 9999;
-//   }
-//   .flex-nav {
-//     order: 1;
-//     // ul {
-//     //   display:none;
-//     //   &.open {
-//     //     display: flex;
-//     //   }
-//     // }
-//   }
-//
-//   .toggle-nav {
-//     display: block;
-//   }
-// }
-
-.box1 {
-  background: #1abc9c;
-}
-.box2 {
-  background: #3498db;
-}
-.box3 {
-  background: #9b59b6;
-}
-.box4 {
-  background: #e67e22;
-}
-.box5 {
-  background: #e74c3c;
-}
-.box6 {
-  background: #bdc3c7;
-}
-.box7 {
-  background: #2ecc71;
-}
-.box8 {
-  background: #12a085;
-}
-.box9 {
-  background: #12a085;
-}
-.box10 {
-  background: #12a085;
+  background: $purple-gradient;
 }
 
-.container {
+a {
+  color: white;
+  font-weight: 100;
+  letter-spacing: 2px;
+  text-decoration: none;
+  // background: rgba(0,0,0,.2);
+  padding: 20px, 5px;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  transition: all .5s;
+  &:hover {
+    // background: rgba(0,0,0,.3);
+  }
+}
+
+.toggle-nav {
+  display: none;
+}
+
+img {
+  width:100%;
+}
+
+input {
+  padding:10px;
+  border:0;
+}
+
+section, footer {
+  text-align: center;
+  background:rgba(0,0,0,0.2);
+  padding:20px;
+  margin:20px 0;
+  color:white;
+  font-weight: 100;
+}
+
+.browserupgrade {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
+
+.wrapper {
+  max-width: 1000px;
+  margin: 0 auto;
+  // padding: 50px;
+}
+
+// flex
+.flex-nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  border: 10px solid goldenrod;
-
 }
 
-.box {
-  flex-basis: 250px;
-  flex-grow: 1;
+.flex-nav li {
+  flex: 3;
 }
-.box3 {
-  flex-grow: 5;
+
+.flex-nav .social {
+  flex: 1;
 }
+
+@media all and (max-width: 1000px) {
+  .flex-nav ul {
+    flex-wrap: wrap;
+  }
+  .flex-nav li {
+    flex:1 1 50%;
+  }
+  .flex-nav .social {
+    flex: 1 1 33%;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .flex-nav li {
+    flex-basis: 100%;
+  }
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .wrapper > * {
+    order: 9999;
+  }
+  .flex-nav {
+    order: 1;
+    // ul {
+    //   display:none;
+    //   &.open {
+    //     display: flex;
+    //   }
+    // }
+  }
+
+  .toggle-nav {
+    display: block;
+  }
+}
+
+// .box1 {
+//   background: #1abc9c;
+// }
+// .box2 {
+//   background: #3498db;
+// }
+// .box3 {
+//   background: #9b59b6;
+// }
+// .box4 {
+//   background: #e67e22;
+// }
+// .box5 {
+//   background: #e74c3c;
+// }
+// .box6 {
+//   background: #bdc3c7;
+// }
+// .box7 {
+//   background: #2ecc71;
+// }
+// .box8 {
+//   background: #12a085;
+// }
+// .box9 {
+//   background: #12a085;
+// }
+// .box10 {
+//   background: #12a085;
+// }
+//
+// .container {
+//   display: flex;
+//   flex-wrap: wrap;
+//   flex-direction: column;
+//   border: 10px solid goldenrod;
+//
+// }
+//
+// .box {
+//   flex-basis: 250px;
+//   flex-grow: 1;
+// }
+// .box3 {
+//   flex-grow: 5;
+// }
