--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,13 +1,13 @@
 // bower:scss
 // endbower
 
-$purple-gradient: linear-gradient(260deg, black, #c16ecf 100%);
+$purple-gradient: linear-gradient(260deg, #1a1b1c, #c16ecf 100%);
 
 @import url(https://fonts.googleapis.com/css?family=Fira+Sans:400,300,300italic,400italic,500,500italic,700,700italic);
 
 @import "fontawesome/_fontawesome";
 
-@import "_animation";
+// @import "_animation";
 
 html {
   box-sizing: border-box;
@@ -35,98 +35,137 @@ a {
   text-align: center;
   transition: all .5s;
   &:hover {
-    // background: rgba(0,0,0,.3);
+    background: rgba(0,0,0,.3);
   }
-}
-
-.toggle-nav {
-  display: none;
-}
-
-img {
-  width:100%;
-}
-
-input {
-  padding:10px;
-  border:0;
-}
-
-section, footer {
-  text-align: center;
-  background:rgba(0,0,0,0.2);
-  padding:20px;
-  margin:20px 0;
-  color:white;
-  font-weight: 100;
-}
-
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
 }
 
 .wrapper {
   max-width: 1000px;
   margin: 0 auto;
-  // padding: 50px;
+  padding: 50px;
 }
 
-// flex
-.flex-nav ul {
+// Flex container
+.flex-nav ul  {
+  border: 1px solid black;
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
-}
-
-.flex-nav li {
-  flex: 3;
-}
-
-.flex-nav .social {
-  flex: 1;
+  li {
+    flex: 3;
+  }
+  .social {
+    flex: 1;
+  }
 }
 
 @media all and (max-width: 1000px) {
   .flex-nav ul {
     flex-wrap: wrap;
-  }
-  .flex-nav li {
-    flex:1 1 50%;
-  }
-  .flex-nav .social {
-    flex: 1 1 33%;
+    li {
+      flex: 1 1 50%;
+      &:last-child {
+        flex-basis: 100%;
+      }
+    }
+    .social {
+      flex: 1  1 33%;
+      &:last-child {
+        flex-basis: 33%;
+      }
+    }
   }
 }
 
-@media all and (max-width: 500px) {
-  .flex-nav li {
-    flex-basis: 100%;
-  }
-  .wrapper {
-    display: flex;
-    flex-direction: column;
-  }
-  .wrapper > * {
-    order: 9999;
-  }
-  .flex-nav {
-    order: 1;
-    // ul {
-    //   display:none;
-    //   &.open {
-    //     display: flex;
-    //   }
-    // }
-  }
-
-  .toggle-nav {
-    display: block;
-  }
-}
+// .toggle-nav {
+//   display: none;
+// }
+//
+// img {
+//   width:100%;
+// }
+//
+// input {
+//   padding:10px;
+//   border:0;
+// }
+//
+// section, footer {
+//   text-align: center;
+//   background:rgba(0,0,0,0.2);
+//   padding:20px;
+//   margin:20px 0;
+//   color:white;
+//   font-weight: 100;
+// }
+//
+// .browserupgrade {
+//   margin: 0.2em 0;
+//   background: #ccc;
+//   color: #000;
+//   padding: 0.2em 0;
+// }
+//
+// .wrapper {
+//   max-width: 1000px;
+//   margin: 0 auto;
+//   // padding: 50px;
+// }
+//
+// // flex
+// .flex-nav ul {
+//   list-style: none;
+//   margin: 0;
+//   padding: 0;
+//   display: flex;
+// }
+//
+// .flex-nav li {
+//   flex: 3;
+// }
+//
+// .flex-nav .social {
+//   flex: 1;
+// }
+//
+// @media all and (max-width: 1000px) {
+//   .flex-nav ul {
+//     flex-wrap: wrap;
+//   }
+//   .flex-nav li {
+//     flex:1 1 50%;
+//   }
+//   .flex-nav .social {
+//     flex: 1 1 33%;
+//   }
+// }
+//
+// @media all and (max-width: 500px) {
+//   .flex-nav li {
+//     flex-basis: 100%;
+//   }
+//   .wrapper {
+//     display: flex;
+//     flex-direction: column;
+//   }
+//   .wrapper > * {
+//     order: 9999;
+//   }
+//   .flex-nav {
+//     order: 1;
+//     // ul {
+//     //   display:none;
+//     //   &.open {
+//     //     display: flex;
+//     //   }
+//     // }
+//   }
+//
+//   .toggle-nav {
+//     display: block;
+//   }
+// }
 
 // .box1 {
 //   background: #1abc9c;
